[package]
name = 'pty-shell'
version = '0.1.1'
authors = ['Hika Hibariya <hibariya@gmail.com>']
repository = 'https://github.com/hibariya/pty-shell'
homepage = 'https://github.com/hibariya/pty-shell'
license='MIT'
description='Spawn a shell and control it through pty'
keywords = ['pty', 'tty', 'shell', 'terminal']

[dependencies]
libc='0.1.8'
mio='0.5.0'
nix='0.3.9'
pty='0.1.6'
termios='0.2.0'
