[package]
name = 'pty-shell'
version = '0.1.4'
authors = ['Hika Hibariya <hibariya@gmail.com>']
repository = 'https://github.com/hibariya/pty-shell'
homepage = 'https://github.com/hibariya/pty-shell'
license='MIT'
description='Spawn a shell and control it through pty'
keywords = ['pty', 'tty', 'shell', 'terminal']

[dependencies]
libc='0.2'
mio='0.5'
nix='0.4'
pty='0.1.6'
termios='0.2.0'
